# Farmtech

./: .clangd  .gitignore  AGENT_PROMPTS.md  ANTIGRAVITY_SETUP.md  CMakeLists.txt  HARDWARE_MAP.md  LICENSE  README.md  Relatorio_Tecnico_FarmTech.md  config.h.example  diagram.json  farmtech.c  farmtech_fase1.c  farmtech_sim.c  lwipopts.h  ws2812.pio
docs/: QUICKSTART.md  Relatorio_Tecnico_FarmTech.docx  dashboard_preview.html  fluxograma.mmd
include/: config.h.example
src/: farmtech.c
tarefa1-unidade4/: CMakeLists.txt  q1_q2_timer_botoes.c  q3_pwm_rgb.c  q4_adc_temperatura.c  respostas_e_prompts.md
unidade7/projeto-final/: CMakeLists.txt  README.md  Relatorio_Tecnico.md  farmtech_core.c  fluxograma.mmd
